# miru

./: .gitignore  README.md
examples/: owknd_step5.ppm  owknd_step7.ppm  owknd_step8.ppm  owknd_step9.ppm  owknd_step9_wide.ppm
src/: bashrc.sh  install.gil  mesh.py  scene.py  test.py
src/cpp/: CMakeLists.txt  Makefile  image.cpp  matrix.cpp  matrix.h  test_matrix.cpp  test_vector.cpp  vector.cpp  vector.h
src/cpp/dependencies/lodepng/: lodepng.cpp  lodepng.h
src/cpp/miru/basic/: definitions.h
src/cpp/miru/engine/: camera.cpp  camera.h  color.cpp  color.h  light.cpp  light.h  material.cpp  material.h  matrix.cpp  scene.cpp  scene.h  sceneobject.cpp  sceneobject.h  scenerender.cpp  scenerender.h  transform.cpp  transform.h  vector.cpp  vector.h
src/cpp/miru/imaging/: image.h  image_lodepng.cpp  image_pngpp.cpp
src/cpp/miru/oneweekend/: camera.h  hitable.h  hitablelist.h  lambertian.h  main.cpp  material.h  metal.h  ray.h  sphere.h  test_ppm.cpp  vec3.h
src/cpp/miru/oneweekend2/: main.cc
src/cpp/miru/raymarching/: render.cpp  render.h  sdfobjects.cpp  sdfobjects.h
src/cpp/miru/test/: test_image.cpp  test_matrix.cpp  test_raymarching.cpp  test_raymarching_sphere.cpp  test_scene.cpp  test_vector.cpp
src/engine/: camera.py  color.py  material.py  sceneparser.py  transform.py
src/raymarching/: scene.py  sdfcube.py  sdfobjects.py
src/raytracing/: cube.py  kernelfilter.py  light.py  mesh.py  meshtools.py  plane.py  scene.py  sphere.py  test.py  test_gif.py  test_texture.py  vector.py
src/scenes/: simple_test.scene  test.scene
src/test/: test.scene
(+68 files in other folders)
